--- a/10.2.0/angular/src/app/doctors/edit-prescriptions/edit-prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/edit-prescriptions/edit-prescriptions.component.html
@@ -1,38 +1,57 @@
 <form class="form-horizontal" autocomplete="off" #editPrescriptionForm="ngForm" (ngSubmit)="save()">
-    <abp-modal-header title="Edit Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
+  <abp-modal-header title="Edit Prescription" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
 
-    <div class="modal-body">
+  <div class="modal-body">
 
-        <!-- Patient Selection -->
-        <div class="row">
-            <div class="col-md-12">
-                <b>Select Patient</b>
-                <p-select [(ngModel)]="prescription.patientId" name="patientId" [options]="patients"
-                    [optionValue]="'id'" optionLabel="fullName" placeholder="Select a patient" class="w-100"
-                    [disabled]="true" />
-            </div>
-        </div>
+    <!-- Patient Selection -->
+    <div class="row">
+      <div class="col-md-12">
+        <b>Select Patient</b>
+        <p-select [(ngModel)]="prescription.patientId" name="patientId"
+                  [options]="patients" [optionValue]="'id'" optionLabel="fullName"
+                  placeholder="Select a patient" class="w-100" [disabled]="true" />
+      </div>
+    </div>
 
-        <!-- Appointment Selection -->
-        <div class="row mt-3">
-            <div class="col-md-12">
-                <label><b>Appointment</b></label>
-                <p-select [(ngModel)]="prescription.appointmentId" name="appointmentId" [options]="appointmentTitle"
-                    optionLabel="title" optionValue="id" placeholder="Select appointment" class="w-100" />
-            </div>
-        </div>
+    <!-- Appointment Selection (only if patient not admitted) -->
+    <!-- <div class="row mt-3" *ngIf="!isPatientAdmitted()">
+      <div class="col-md-12">
+        <label><b>Appointment</b></label>
+        <p-select [(ngModel)]="prescription.appointmentId" name="appointmentId"
+                  [options]="appointments" optionValue="id"
+                  placeholder="Select appointment" class="w-100" [disabled]="true">
+          <ng-template let-app pTemplate="item">
+            {{ app.appointmentDate | date:'dd/MM/yyyy' }} - {{ app.patient?.fullName }}
+          </ng-template>
+          <ng-template let-app pTemplate="selectedItem">
+            {{ app?.appointmentDate | date:'dd/MM/yyyy' }} - {{ app?.patient?.fullName }}
+          </ng-template>
+        </p-select>
+      </div>
+    </div> -->
 
-        <!-- Diagnosis -->
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <label>Diagnosis</label>
-                <input type="text" pInputText [(ngModel)]="prescription.diagnosis" name="diagnosis" required
-                    placeholder="Enter diagnosis" />
-            </div>
-        </div>
+    <!-- Procedure Selection (always show) -->
+    <div class="row mt-3">
+      <div class="col-md-12">
+        <label><b>Select Procedures (if required)</b></label>
+        <p-multiSelect [(ngModel)]="selectedProcedures"
+                       [options]="procedures" placeholder="Select Procedures"
+                       display="chip" class="w-100" name="procedureIds">
+        </p-multiSelect>
+      </div>
+    </div>
 
-        <!-- Lab Tests -->
-        <div class="row mt-3">
+    <!-- Diagnosis -->
+    <div class="row mt-3">
+      <div class="col-md-12 d-flex flex-column">
+        <label>Diagnosis</label>
+        <input type="text" pInputText [(ngModel)]="prescription.diagnosis"
+               name="diagnosis" required placeholder="Enter diagnosis" />
+      </div>
+    </div>
+
+    <!-- Lab Tests -->
+    <div class="row mt-3">
             <div class="col-md-12">
                 <label><b>Select Lab Tests (if required)</b></label>
                 <p-multiSelect [(ngModel)]="selectedLabTests" [options]="labTests" optionLabel="name"
@@ -52,85 +71,97 @@
             </div>
         </div>
 
-        <!-- Notes -->
-        <div class="row mt-3">
-            <div class="col-md-12 d-flex flex-column">
-                <label>Notes</label>
-                <textarea pTextarea [(ngModel)]="prescription.notes" name="notes" rows="3" class="w-100"
-                    placeholder="Enter notes"></textarea>
-            </div>
-        </div>
-
-        <!-- Follow-up -->
-        <div class="row mt-3">
-            <div class="col-md-6 d-flex align-items-center mt-4">
-                <p-checkbox [(ngModel)]="prescription.isFollowUpRequired" name="isFollowUpRequired" inputId="followup"
-                    [binary]="true" />
-                <label for="followup" class="ml-2"><b>Follow-up Required</b></label>
-            </div>
-        </div>
-
-        <!-- Prescription Items -->
-        <div class="row mt-4">
-            <div class="col-md-12">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div><b>Prescription Items</b></div>
-                    <div>
-                        <p-button label="Add Item" variant="text" severity="info" (click)="addItem()"
-                            icon="fa-solid fa-plus" />
-                    </div>
-                </div>
-
-                <div class="d-flex" *ngIf="prescription.items.length>0">
-                    <p class="w-25 m-0">Medicine</p>
-                    <p class="w-25 m-0">Dosage</p>
-                    <p class="w-25 m-0">Frequency</p>
-                    <p class="w-25 m-0">Duration</p>
-                    <p class="w-25 m-0">Instructions</p>
-                </div>
-
-                <div *ngFor="let item of prescription.items; let i = index" class="mt-2">
-                    <div class="d-flex align-items-center">
-                        <!-- Medicine Dropdown -->
-                        <p-dropdown [(ngModel)]="item.medicineId" [options]="medicineOptions" optionLabel="label"
-                            optionValue="value" placeholder="Select Medicine" class="w-25 mr-2" name="itemMedicine{{i}}"
-                            (onChange)="onMedicineChange(item, i)">
-                        </p-dropdown>
-
-                        <!-- Dosage Dropdown -->
-                        <p-dropdown *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
-                            [(ngModel)]="item.dosage" [options]="getDosageOptions(item.medicineName)"
-                            optionLabel="label" optionValue="value" placeholder="Dosage" class="w-25 mr-2"
-                            name="itemDosage{{i}}">
-                        </p-dropdown>
-                        <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]" type="text"
-                            pInputText [(ngModel)]="item.dosage" name="itemDosage{{i}}" class="w-25 mr-2"
-                            placeholder="Dosage" />
-
-                        <!-- Frequency Dropdown -->
-                        <p-dropdown [(ngModel)]="item.frequency" [options]="frequencyOptions" optionLabel="label"
-                            optionValue="value" placeholder="Frequency" class="w-25 mr-2"
-                            name="itemFrequency{{i}}"></p-dropdown>
-
-                        <!-- Duration (Input + Dropdown) -->
-                        <div class="d-flex w-25 mr-2">
-                            <input type="number" pInputText [(ngModel)]="item.durationValue" placeholder="Duration"
-                                class="w-50 mr-1" min="1" required name="durationValue{{i}}">
-                            <p-dropdown [(ngModel)]="item.durationUnit" [options]="durationUnits" optionLabel="label"
-                                optionValue="value" class="w-50" name="itemDurationUnit{{i}}" required></p-dropdown>
-                        </div>
-
-                        <!-- Instructions Textarea -->
-                        <textarea pInputText [(ngModel)]="item.instructions" name="itemInstructions{{i}}"
-                            class="w-25 mr-2" placeholder="Instructions" rows="1"></textarea>
-
-                        <p-button variant="text" severity="danger" (click)="removeItem(i)" icon="fa-solid fa-xmark" />
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- Notes -->
+    <div class="row mt-3">
+      <div class="col-md-12 d-flex flex-column">
+        <label>Notes</label>
+        <textarea pTextarea [(ngModel)]="prescription.notes" name="notes"
+                  rows="3" class="w-100" placeholder="Enter notes"></textarea>
+      </div>
     </div>
 
-    <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="isSaveDisabled()" (onCancelClick)="bsModalRef.hide()">
-    </abp-modal-footer>
+    <!-- Follow-up -->
+    <div class="row mt-3">
+      <div class="col-md-6 d-flex align-items-center mt-4">
+        <p-checkbox [(ngModel)]="prescription.isFollowUpRequired"
+                    name="isFollowUpRequired" inputId="followup" [binary]="true" />
+        <label for="followup" class="ml-2"><b>Follow-up Required</b></label>
+      </div>
+    </div>
+
+    <!-- Prescription Items -->
+    <div class="row mt-4">
+      <div class="col-md-12">
+        <div class="d-flex justify-content-between align-items-center">
+          <div><b>Prescription Items</b></div>
+          <div>
+            <p-button label="Add Item" variant="text" severity="info"
+                      (click)="addItem()" icon="fa-solid fa-plus" />
+          </div>
+        </div>
+
+        <div class="d-flex" *ngIf="prescription.items.length>0">
+          <p class="w-25 m-0">Medicine</p>
+          <p class="w-25 m-0">Dosage</p>
+          <p class="w-25 m-0">Frequency</p>
+          <p class="w-25 m-0">Duration</p>
+          <p class="w-25 m-0">Instructions</p>
+        </div>
+
+        <div *ngFor="let item of prescription.items; let i = index" class="mt-2">
+          <div class="d-flex align-items-center">
+            <!-- Medicine Dropdown -->
+            <p-dropdown [(ngModel)]="item.medicineId"
+                        [options]="medicineOptions" optionLabel="label" optionValue="value"
+                        placeholder="Select Medicine" class="w-25 mr-2"
+                        name="itemMedicine{{i}}" (onChange)="onMedicineChange(item, i)">
+            </p-dropdown>
+
+            <!-- Dosage Dropdown -->
+            <p-dropdown *ngIf="item.medicineName && medicineDosageOptions[item.medicineName]"
+                        [(ngModel)]="item.dosage"
+                        [options]="getDosageOptions(item.medicineName)"
+                        optionLabel="label" optionValue="value"
+                        placeholder="Dosage" class="w-25 mr-2"
+                        name="itemDosage{{i}}">
+            </p-dropdown>
+            <input *ngIf="!item.medicineName || !medicineDosageOptions[item.medicineName]"
+                   type="text" pInputText [(ngModel)]="item.dosage"
+                   name="itemDosage{{i}}" class="w-25 mr-2"
+                   placeholder="Dosage" />
+
+            <!-- Frequency Dropdown -->
+            <p-dropdown [(ngModel)]="item.frequency"
+                        [options]="frequencyOptions" optionLabel="label"
+                        optionValue="value" placeholder="Frequency"
+                        class="w-25 mr-2" name="itemFrequency{{i}}">
+            </p-dropdown>
+
+            <!-- Duration (Input + Dropdown) -->
+            <div class="d-flex w-25 mr-2">
+              <input type="number" pInputText [(ngModel)]="item.durationValue"
+                     placeholder="Duration" class="w-50 mr-1" min="1"
+                     required name="durationValue{{i}}">
+              <p-dropdown [(ngModel)]="item.durationUnit"
+                          [options]="durationUnits" optionLabel="label" optionValue="value"
+                          class="w-50" name="itemDurationUnit{{i}}" required>
+              </p-dropdown>
+            </div>
+
+            <!-- Instructions Textarea -->
+            <textarea pInputText [(ngModel)]="item.instructions"
+                      name="itemInstructions{{i}}" class="w-25 mr-2"
+                      placeholder="Instructions" rows="1"></textarea>
+
+            <p-button variant="text" severity="danger"
+                      (click)="removeItem(i)" icon="fa-solid fa-xmark" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="isSaveDisabled()"
+                    (onCancelClick)="bsModalRef.hide()">
+  </abp-modal-footer>
 </form>
